tests/samples/invalid/loop_in_function.pn
fn main()
{
	var x: i32 = 33;

	x = x + 1;

	loop;
}
